# BlackJack-Simulator-AI

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  blackjack_brain.db  cmake_install.cmake  readME.md
include/: Card.h  Deck.h  Hand.h  QLearner.h  Renderer.h  Trainer.h
src/: Card.cpp  Deck.cpp  Hand.cpp  QLearner.cpp  Renderer.cpp  Trainer.cpp  main.cpp
